# script-factory

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
backend/: CLAUDE.md
backend/app/: main.py
backend/app/agents/: CLAUDE.md  base.py  planning.py  review.py  revision.py  writing.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  logging.py
backend/app/guardrails/: compliance.py
backend/app/pipeline/: CLAUDE.md  orchestator.py
backend/app/schemas/: agent.py  request.py  response.py
backend/app/tracker/: langfuse.py
backend/evaluation/: eval_results.json  run_eval.py  topics.json
backend/tests/: CLAUDE.md  test_agents.py  test_compliance.py  test_e2e.py  test_extract_json.py  test_pipeline.py
docker/: Dockerfile.api  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: 项目6-自媒体口播脚本自动生成工厂.md
docs/superpowers/plans/: 2026-05-17-自媒体口播脚本工厂-实施计划.md
docs/superpowers/specs/: 2026-05-17-自媒体口播脚本工厂-设计文档.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: CLAUDE.md  InputForm.vue  PipelineView.vue  ScriptOutput.vue
